--- a/scss/css/component.css
+++ b/scss/css/component.css
@@ -23,37 +23,42 @@
   src: url(./font/notoSans/eot/NotoSansKR-Medium-Hestia.eot?#iefix) format("embedded-opentype"), url(./font/notoSans/woff/NotoSansKR-Medium-Hestia.woff) format("woff");
 }
 
+/* text color */
+/* background */
 /* reset */
-html, body, div, span, object, h1, h2, h3, h4, h5, h6, p, blockquote, a, button, abbr, address, img, q, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, footer, header, section, summary {
+:root {
+  overflow-wrap: break-word;
+}
+
+body, html {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: 'Noto Sans DemLight', "맑은 고딕", "Malgun Gothic", Dotum, sans-serif;
+  font-size: 13px;
+  color: #333;
+  letter-spacing: -0.045em !important;
+}
+
+:where(html, body, div, span, object, h1, h2, h3, h4, h5, h6, p, blockquote, a, button, abbr, address, img, q, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, footer, header, section, summary) {
   margin: 0;
   padding: 0;
   border: 0;
   font: inherit;
 }
 
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+:where(article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section) {
   display: block;
 }
 
-/* HTML5 display-role reset for older browsers */
-body, html {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
-ol, ul {
+ol, ul, li {
   list-style: none;
 }
 
 table {
   border-collapse: collapse;
   border-spacing: 0;
-}
-
-img {
-  border: none;
 }
 
 a {
@@ -77,20 +82,6 @@ input, button, a, select, option {
   font-size: inherit;
 }
 
-input[type="checkbox"] {
-  border: none !important;
-}
-
-/* for lte IE10 */
-input[type="radio"] {
-  border: none !important;
-}
-
-/* for lte IE10 */
-input[type="text"]::-ms-clear {
-  display: none;
-}
-
 button:focus {
   outline: none;
 }
@@ -105,24 +96,7 @@ pre {
   margin: 0 !important;
 }
 
-li {
-  list-style: none;
-}
-
-summary::marker {
-  display: none !important;
-}
-
-/* text color */
-/* background */
-/* common */
-body, html {
-  font-family: 'Noto Sans DemLight', "맑은 고딕", "Malgun Gothic", Dotum, sans-serif;
-  font-size: 13px;
-  color: #333;
-  letter-spacing: -0.045em !important;
-}
-
+/* class */
 .hidden {
   display: block;
   margin: 0;
@@ -135,7 +109,6 @@ body, html {
   visibility: hidden;
 }
 
-/* class */
 .block {
   display: block;
 }
@@ -327,6 +300,50 @@ body, html {
 
 #wrap.license .indentTxtArea ul li + li {
   padding-top: 5px;
+}
+
+#wrap.err {
+  background-color: #C92A2C;
+}
+
+#wrap.err #container {
+  display: -ms-flexbox;
+  max-width: 600px;
+  margin: 0 auto;
+  height: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#wrap.err .imgDiv + .txtDiv {
+  margin-top: 20px;
+}
+
+#wrap.err .txtDiv, #wrap.err .descDiv, #wrap.err .bottomDiv {
+  color: #fff;
+  font-family: '맑은 고딕';
+}
+
+#wrap.err .txtDiv {
+  font-size: 24px;
+}
+
+#wrap.err .txtDiv + .descDiv {
+  margin-top: 30px;
+}
+
+#wrap.err .descDiv {
+  font-size: 16px;
+}
+
+#wrap.err .descDiv p + p {
+  margin-top: 15px;
+}
+
+#wrap.err .bottomDiv {
+  margin-top: 40px;
+  font-size: 16px;
 }
 
 #container {
@@ -1018,6 +1035,10 @@ i.ico.result {
   background: rgba(0, 0, 0, 0.6);
 }
 
+code[class*=language-], pre[class*=language-] pre {
+  white-space: pre-wrap !important;
+}
+
 .highlightArea {
   position: relative;
 }
@@ -1074,6 +1095,38 @@ i.ico.result {
 .highlightArea .code-toolbar .toolbar-item.jsStyle span {
   color: #000 !important;
   background-color: #f7e018 !important;
+}
+
+.highlightArea.cScroll {
+  overflow: auto;
+  scrollbar-width: thin;
+  scrollbar-color: #303030 transparent;
+}
+
+.highlightArea.cScroll::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+.highlightArea.cScroll::-webkit-scrollbar-button {
+  display: none;
+}
+
+.highlightArea.cScroll::-webkit-scrollbar-track {
+  background-color: #e9e9e9;
+}
+
+.highlightArea.cScroll::-webkit-scrollbar-thumb {
+  background: #ccc;
+  border-radius: 5px;
+}
+
+.highlightArea.cScroll::-webkit-scrollbar-thumb:hover {
+  background: #b6b6b6;
+}
+
+.highlightArea.cScroll::-webkit-scrollbar-thumb:active {
+  background: #808080;
 }
 
 .boardList {
@@ -2047,7 +2100,7 @@ i.ico.center {
   background: #333 url("../../images/ico/ico-plus-w.png") no-repeat center;
 }
 
-.wrap.pre.floating #floatingMenu .menuArea .btnMenuList:hover ~ ul.menuList li {
+.wrap.pre.floating #floatingMenu .menuArea .btnMenuList:hover ul.menuList li {
   visibility: visible;
   -webkit-transform: translateY(0) scale(1);
           transform: translateY(0) scale(1);
